# network-monitor

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  cliff.toml  docker-compose.yml
.github/workflows/: ci-server.yml  ci-web.yml  deploy.yml  release.yml
agent/: .env.example  Cargo.toml
agent/src/: auth.rs  docker_cache.rs  handler.rs  logger.rs  main.rs  models.rs  ports.rs
agent/src/gpu/: apple.rs  mod.rs  nvidia.rs
docs/: AFTER_INSTALL.md  DEPLOYMENT.md
netsentinel-agent/: .env.example  Cargo.toml  deploy.sh
netsentinel-agent/src/: auth.rs  docker_cache.rs  handler.rs  logger.rs  main.rs  models.rs  ports.rs  sysinfo_collector.rs
netsentinel-agent/src/gpu/: nvidia.rs
netsentinel-server/: .env.example  .gitignore  Cargo.toml  Dockerfile  deploy.sh
netsentinel-server/migrations/: 001_initial_schema.sql  002_timescaledb.sql  003_continuous_aggregate.sql  004_monitors.sql  006_ca_v2.sql  007_password_changed_at.sql  008_compression_policies.sql  009_add_indexes.sql  010_tokens_revoked_at.sql  011_refresh_tokens.sql  012_expanded_metrics.sql  014_ca_v3.sql  016_alert_history_created_at_index.sql  017_expand_alert_metric_types.sql
netsentinel-server/src/: db.rs  errors.rs  main.rs  request_id.rs
netsentinel-server/src/handlers/: alert_configs_handler.rs  alert_history_handler.rs  auth_handler.rs  hosts_handler.rs  metrics_handler.rs  mod.rs  monitors_handler.rs  notification_channels_handler.rs  sse_handler.rs
netsentinel-server/src/models/: agent_metrics.rs  app_state.rs  mod.rs  sse_payloads.rs
netsentinel-server/src/repositories/: alert_configs_repo.rs  alert_history_repo.rs  hosts_repo.rs  metrics_repo.rs  mod.rs  notification_channels_repo.rs  ping_monitors_repo.rs  users_repo.rs
netsentinel-server/src/routes/: metrics_routes.rs  mod.rs
netsentinel-server/src/services/: alert_service.rs  auth.rs  hosts_snapshot.rs  metrics_service.rs  mod.rs  monitor_scraper.rs  refresh_token.rs  rollup_worker.rs  scraper.rs  sse_ticket.rs  static_assets.rs  url_validator.rs  user_auth.rs
netsentinel-web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
netsentinel-web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
netsentinel-web/app/agents/: page.tsx
netsentinel-web/app/alerts/: page.tsx
netsentinel-web/app/auth/: AuthContext.tsx
netsentinel-web/app/components/: CpuCoreGrid.tsx  DashboardWidgets.tsx  DateTimePicker.tsx  DiskUsageBar.tsx  DockerGrid.tsx  ErrorBoundary.tsx  NetworkInterfaceTable.tsx  PageHeader.tsx  ProcessTable.tsx  ServiceWorkerRegistration.tsx  Sidebar.tsx  SidebarShell.tsx  Switch.tsx  TemperatureDisplay.tsx  TimeSeriesChart.tsx
netsentinel-web/app/host/: HostPageClient.tsx  page.tsx
netsentinel-web/app/i18n/: I18nContext.tsx  translations.ts
netsentinel-web/app/lib/: api.test.ts  api.ts  formatters.test.ts  formatters.ts  sse-context.tsx  status.test.ts  status.ts
netsentinel-web/app/login/: page.tsx
netsentinel-web/app/monitors/: page.tsx
netsentinel-web/app/setup/: page.tsx
netsentinel-web/app/status/: page.tsx
netsentinel-web/app/theme/: ThemeContext.tsx
netsentinel-web/app/types/: metrics.ts
netsentinel-web/public/: manifest.json  sw.js
netsentinel-web/scripts/: export-start.mjs
network-monitor-agent/: Cargo.toml  deploy.sh
network-monitor-agent/src/: auth.rs  handler.rs  logger.rs  main.rs  models.rs  sysinfo_collector.rs
network-monitor-agent/src/gpu/: apple.rs  mod.rs  nvidia.rs
network-monitor-server/: Cargo.toml  Dockerfile
network-monitor-server/migrations/: 005_retention_policies.sql  006_ca_v2.sql
network-monitor-server/src/: logger.rs  main.rs
network-monitor-server/src/handlers/: alert_configs_handler.rs  auth_handler.rs  dashboard_handler.rs  hosts_handler.rs  metrics_handler.rs  monitors_handler.rs  notification_channels_handler.rs  sse_handler.rs
network-monitor-server/src/models/: app_state.rs  sse_payloads.rs
network-monitor-server/src/repositories/: alert_configs_repo.rs  alert_history_repo.rs  dashboard_repo.rs  hosts_repo.rs  http_monitors_repo.rs  metrics_repo.rs  notification_channels_repo.rs  refresh_tokens_repo.rs  users_repo.rs
network-monitor-server/src/routes/: metrics_routes.rs
network-monitor-server/src/services/: alert_service.rs  auth.rs  metrics_service.rs  mod.rs  monitor_scraper.rs  scraper.rs  sse_ticket.rs  user_auth.rs
network-monitor-web/: package-lock.json  package.json
network-monitor-web/app/: globals.css  page.tsx
network-monitor-web/app/agents/: page.tsx
scripts/: bootstrap.sh  doctor.sh  install-agent.sh  install-hub.sh  publish-server-image.sh  remove-agent.sh  remove-hub.sh  smoke-test.sh  update-agent.sh  update-hub.sh
server/: .env.example  Cargo.toml  Dockerfile  deploy.sh
server/migrations/: 0001_init.sql  0002_network_bandwidth_columns.sql  0003_metrics_raw_bandwidth_columns.sql  0004_metrics_5min_uptime_covering_index.sql  0005_metrics_total_bytes_columns.sql
server/src/: db.rs  errors.rs  main.rs  request_id.rs
server/src/handlers/: alert_configs_handler.rs  alert_history_handler.rs  auth_handler.rs  dashboard_handler.rs  hosts_handler.rs  metrics_handler.rs  monitors_handler.rs  notification_channels_handler.rs  sse_handler.rs
server/src/models/: agent_metrics.rs  app_state.rs  sse_payloads.rs
server/src/repositories/: alert_configs_repo.rs  alert_history_repo.rs  dashboard_repo.rs  hosts_repo.rs  http_monitors_repo.rs  metrics_repo.rs  notification_channels_repo.rs  ping_monitors_repo.rs  refresh_tokens_repo.rs  users_repo.rs
server/src/routes/: metrics_routes.rs
server/src/services/: alert_service.rs  hosts_snapshot.rs  mod.rs  monitor_scraper.rs  monitors_snapshot.rs  retention_worker.rs  rollup_worker.rs  sse_ticket.rs  static_assets.rs  url_validator.rs  user_auth.rs
web/: .dockerignore  .env.example  README.md  eslint.config.mjs  package-lock.json  package.json
web/app/: globals.css  not-found.tsx  providers.tsx
web/public/: manifest.json  sw.js
web/scripts/: export-start.mjs
(+56 files in other folders)
