[package]
name = "network-monitor-server"
version = "1.1.3"
edition = "2024"
description = "Pull-based server monitoring backend — metrics aggregation, alerts, and REST API"
license = "Apache-2.0"
repository = "https://github.com/sounmu/network-monitor"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
bincode = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "migrate"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-full"] }
anyhow = "1.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono-tz = "0.10.4"
futures = "0.3.32"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["ansi", "env-filter", "fmt", "json", "registry", "std", "tracing-log"] }
tracing-appender = "0.2.4"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }
argon2 = "0.5"
base64 = "0.22"
sha2 = "0.10"
url = "2.5.8"
