[package]
name = "server"
version = "0.4.3"
edition = "2024"
description = "Pull-based server monitoring backend — metrics aggregation, alerts, and REST API"
license = "Apache-2.0"
repository = "https://github.com/sounmu/netsentinel"

# Preserve the produced binary name. The Dockerfile copies
# target/release/netsentinel-server to /app/server, and DEPLOYMENT.md
# `--vacuum-into` examples assume `/app/server` as the entrypoint.
[[bin]]
name = "netsentinel-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
# Pin bincode to 1.3.3 — must match the agent (`agent/Cargo.toml`)
# exactly so the scrape payload deserializes cleanly. bincode 2.x changed
# the on-wire layout incompatibly; pinning prevents `cargo update` from
# silently picking a newer patch with format-affecting changes.
bincode = "=1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
# SQLite-only: NetSentinel ships a single embedded backend per
# docs/SQLITE_MIGRATION.md. Postgres/TimescaleDB support was retired
# at v0.4.0 to collapse the operational surface to one binary + one
# file. `sqlx/json` gives us `sqlx::types::Json<T>` for TEXT JSON
# binding.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "chrono", "migrate", "sqlite", "json"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-full", "fs"] }
anyhow = "1.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono-tz = "0.10.4"
futures = "0.3.32"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["ansi", "env-filter", "fmt", "json", "registry", "std", "tracing-log"] }
tracing-appender = "0.2.4"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }
argon2 = "0.5"
base64 = "0.22"
sha2 = "0.10"
url = "2.5.8"

# Match the agent's release profile. The server is on every hot path
# (JSON/bincode serialization, Argon2 password hashing, reqwest outbound
# scraping, JWT HMAC) — LTO + single codegen-unit yields ~5–15% throughput
# on these workloads at the cost of longer build times.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
